@@ -185,9 +185,10 @@ public class Baiting extends GatheringSkill
 			if(CMLib.flags().isWateryRoom(R))
 				fishRoom=R;
 			else
-			if((R.getArea() instanceof NavigableItem)
+			if((R.getArea() instanceof Boardable)
+			&&(((Boardable)R.getArea()).getBoardableItem() instanceof NavigableItem)
 			&&((R.domainType()&Room.INDOORS)==0))
-				fishRoom=CMLib.map().roomLocation(((NavigableItem)R.getArea()).getBoardableItem());
+				fishRoom=CMLib.map().roomLocation(((Boardable)R.getArea()).getBoardableItem());
 
 			if((fishRoom==null)||(!CMLib.flags().isWateryRoom(fishRoom)))
 			{
