@@ -321,6 +321,9 @@
 #     [NUM] is the number of titles matching the mask
 #     [TITLEMASK] is an optional regular expression mask for titles
 #
+# ... EVENT="SCRIPTED" NUM=[NUMBER] TITLEMASK="[TITLEMASK]" ...
+#     [NUM] is the number of times it was bumped with MPACHIEVE
+#
 # Some achievement events are updated every mud-hour (10 mins) automatically by 
 # the system for all players on-line and in memory.
 #
