@@ -806,6 +806,13 @@ Example  : camouflage table\n\r\
 The ranger covers the target so that they resemble the surrounding country, making \
 them more difficult to see.
 
+FIGHTER_CARAVANCOMMANDER=CARAVAN_COMMANDER
+CARAVAN_COMMANDER=<ABILITY>\
+This skill gives the fighter and his or her group an edge in attack and armor when \
+fighting inside a caravan that the fighter is associated with.  It also improves \
+the attack potential of all siege weapons fired from the caravan while the commander \
+is inside.
+
 FIGHTER_CARAVANTACTICS=CARAVAN_TACTICS
 CARAVAN_TACTICS=<ABILITY>\
 This skill gives the fighter an edge in attack, defence, and damage \
